# ppcaptions

./: .gitignore  Dockerfile  README.md  docker-compose.yml  download_utils.py  ffmpeg_utils.py  ppcaptions.ipynb  ppcaptions.py  ppcaptions_cli.py  pyproject.toml  requirements.txt  translate_utils.py  whisper_utils.py  whisperx_utils.py
.github/workflows/: python-publish.yml  static.yml
docs/: index.html
tests/: test_ffmpeg_utils.py  test_ppcaptions_cli.py
webapp_ppcaptions/: index.html  package-lock.json  package.json  vite.config.ts
webapp_ppcaptions/src/: App.tsx
